Level up behaviour, post-11 and fixes/refactoring